[package]
name = "portfolio-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "portfolio-server"

[dev-dependencies]
tokio = { version = "1", features = ["rt"]}

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
config = "0.15.19"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.228"
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
