[package]
name = "portfolio-server"
version = "1.0.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "portfolio-server"

[dev-dependencies]
serde_json = "1.0.61"
tokio = { version = "1", features = ["rt"]}

[features]
console = ["console-subscriber"]

[dependencies]
console-subscriber = { version = "0.5", optional = true }
actix-cors = "0.7"
actix-limitation = { version = "0.5" }
actix-session = { version = "0.11", features = ["redis-session-rustls"]}
actix-web = { version = "4.13", features = ["rustls"] }
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
argon2 = { version = "0.5.3", features = ["std"] }
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
config = "0.15.19"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "default-tls",
    "cookies",
    "form",
] }
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.228"
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
email_address = "0.2.9"